# neuro-rab-openvk

./: .env.example  .gitignore  Cargo.toml  IMAGE_HANDLING_UPDATE.md  LICENSE  OPENVK_LONGPOLL_FIX.md  README.md  REPOST_CONTEXT_SUPPORT.md  VISION_API_FIX.md  VISION_API_URL_FIX.md  VISION_JSON_LOGGING_FIX.md
src/: config.rs  context.rs  image_handler.rs  logger.rs  longpoll_manager.rs  main.rs
src/ai/: claude.rs  mod.rs
src/db/: mod.rs
src/openvk/: client.rs  mod.rs
src/web/: mod.rs  scraper.rs  search.rs
