[package]
name = "neuro-rab-openvk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.17"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "tracing-log"] }
tracing-log = "0.2"


tracing-appender = "0.2"
dotenv = "0.15"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
html-escape = "0.2"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
url = "2.4"
